# Squeezed-Convolutional-VAE-for-anomaly-detection

./: .gitignore  LICENSE.md  README.md  pyproject.toml
datasets/skab/: README.md
tests/: test_detector.py
time_series_anomaly_detection/: SCVAE.ipynb  abstractions.py  detector.py  skab_experiments_1.ipynb  skab_experiments_2.ipynb  univariate_twitter_data_experiments.ipynb
